--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-handlebars": "^7.1.2",
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
+    "nodemailer": "^6.9.8",
+    "nodemailer-express-handlebars": "^6.1.0",
     "nodemon": "^3.0.2",
     "path": "^0.12.7",
     "validator": "^13.11.0"
